# BigMPI

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  Makefile  Makefile.am  README.md  bigmpi.h  bigmpi_impl.h  bigmpi_impl.h.gch  configure.ac  sendrecv.c  sendrecv_x.c  type_contiguous_x.c
generator/: make_c11_header.py
include/: bigmpi.h
src/: CMakeLists.txt  Makefile  bigmpi.h  bigmpi_comms.c  bigmpi_comms.h  bigmpi_impl.h  bigmpi_internals.c  bigmpi_internals.h  bigmpi_types.c  bigmpi_types.h  collectives_x.c  fileio_x.c  float128.c  init_final.c  mpi_c11.h  neighborhood_collectives_x.c  new_vcollectives_x.c  reductions_x.c  rma_x.c  sendrecv_x.c  type_contiguous_x.c  type_hindexed_x.c  utils.c  vcollectives_x.c
test/: CMakeLists.txt  Makefile  Makefile.mk  test_allgather_x.c  test_allreduce_x.c  test_alltoall_x.c  test_assert_x.c  test_bsend_recv_x.c  test_contig_x.c  test_factorize.c  test_gather_x.c  test_ibsend_irecv_x.c  test_irsend_irecv_x.c  test_isend_irecv_x.c  test_issend_irecv_x.c  test_reduce_x.c  test_rma2_x.c  test_rma_x.c  test_rsend_recv_x.c  test_scatter_x.c  test_send_recv_x.c  test_sendrecv_x.c  test_ssend_recv_x.c
test/bigmpi/: CMakeLists.txt  Makefile  test_alltoall_x.c  test_bcast_x.c  test_contig_x.c  test_gather_x.c  test_isend_irecv_x.c  test_isendrecv_x.c  test_reduce_x.c  test_rma2_x.c  test_rma_x.c  test_send_recv_x.c  test_sendrecv_x.c  verify_buffer.c  verify_buffer.h
test/devel/: Makefile  mpfr.c  preprocessor.c  real16_userdef_reduction.f90  short_count.c  test_c11_generic.c
test/mpi/: Makefile
test/perf/: Makefile  reductions.c  typecontig.c
tests/: CMakeLists.txt  Makefile  Makefile.mk  aint_overflow.c  aint_overflow.x  test_assert_x.c  test_rma_x.c  test_scatter_x.c
tests/aint_overflow.x.dSYM/Contents/: Info.plist
tests/aint_overflow.x.dSYM/Contents/Resources/DWARF/: aint_overflow.x
tests/bigmpi/: test_reduce_x.c  verify_buffer.c
tests/mpi/: Makefile
travis/: build-linux.sh  build-run.sh  dep-linux.sh  install-autotools.sh  install-deps.sh  install-mpi.sh
